--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class='row'>
       <div class='col-md-offset-2 col-md-8 game-board'>
-        <table class='board'></table>
+        <div class='board'></div>
       </div>
     </div>
 
