--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <hr class='divider'>
 
+    <div class='stripe'></div>
+    
     <div class='row'>
       <div class='col-md-offset-2 col-md-8 game-board'>
         <div class='board'></div>
