--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <title>Connect Four</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel='stylesheet' type="text/css" href='main.css'>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-101198677-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+
 </head>
 
 <body>
@@ -22,7 +34,7 @@
     <hr class='divider'>
 
     <div class='stripe'></div>
-    
+
     <div class='row'>
       <div class='col-md-offset-2 col-md-8 game-board'>
         <div class='board'></div>
